// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingBadge /> renders link RatingBadge correctly 1`] = `
<button
  className="ihWbwc"
  href="/"
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="fzhVVQ"
  >
    <svg
      className="kiOhBO"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="kSGCtX"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders outline RatingBadge correctly 1`] = `
<button
  className="jraGyQ"
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="fzhVVQ"
  >
    <svg
      className="kiOhBO"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="kSGCtX"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders outline disabled RatingBadge correctly 1`] = `
<button
  className="jraGyQ"
  disabled={true}
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="fzhVVQ"
  >
    <svg
      className="kiOhBO"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="kSGCtX"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders standard RatingBadge correctly 1`] = `
<button
  className="ihWbwc"
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="fzhVVQ"
  >
    <svg
      className="kiOhBO"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="kSGCtX"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders standard disabled RatingBadge correctly 1`] = `
<button
  className="ihWbwc"
  disabled={true}
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="fzhVVQ"
  >
    <svg
      className="kiOhBO"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="kSGCtX"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders transparent RatingBadge correctly 1`] = `
<button
  className="fKtAjT"
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="fzhVVQ"
  >
    <svg
      className="kiOhBO"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="kSGCtX"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders transparent disabled RatingBadge correctly 1`] = `
<button
  className="fKtAjT"
  disabled={true}
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="fzhVVQ"
  >
    <svg
      className="kiOhBO"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="kSGCtX"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;
